[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiebenn"
version = "0.1.0"
description = "Automatic focal depth estimation for local seismic events in Germany using ML tools and NonLinLoc"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
  { name = "C. Ramos, S. Donner, K. Stammler", email = "ramosdomke.bgr@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
  "seisbench",
  "pygmt",
  "pyocto",
  "pyrocko",
  "joblib",
  "nllgrid",
]

[project.urls]
Homepage = "https://github.com/Cthuulhaa/tiebenn.git"
Documentation = "https://tiebenn.readthedocs.io/en/latest/"

[project.scripts]
tiebenn = "tiebenn.cli:main_cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"tiebenn" = [
  "data/velocity_models/**/*",
  "data/crust1/*"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
